Mine applikationer undervejs

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <app-navbar></app-navbar>
-<div class="container-fluid pt-5 px-5 main-body">
-  <router-outlet></router-outlet>
+<div id="content">
+  <div class="container-fluid pt-5 px-5 main-body">
+    <router-outlet></router-outlet>
+  </div>
 </div>
