--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-navbar></app-navbar>
 <div id="content">
-  <div class="container-fluid pt-5 px-5 main-body">
+  <div id="mainBody" class="container-fluid">
     <router-outlet></router-outlet>
   </div>
 </div>
