--- a/src/assets/scss/_base.scss
+++ b/src/assets/scss/_base.scss
@@ -1,4 +1,20 @@
 body {
     background-color: $grey-light;
     font-family: roboto;
+    color: $black;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+p,
+a {
+    font-family: roboto;
+}
+
+.row {
+    margin-left: -1rem;
+    margin-right: -1rem;
 }
