--- a/src/app/shared/form/question/question.component.html
+++ b/src/app/shared/form/question/question.component.html
@@ -1,7 +1,7 @@
 <div [formGroup]="form">
   <label [attr.for]="question.key" class="form-label">{{ question.label | translate }}</label>
 
-  <div [ngSwitch]="question.controlType">
+  <ng-container [ngSwitch]="question.controlType">
 
     <input *ngSwitchCase="'textboxsmall'" [formControlName]="question.key" [id]="question.key" [type]="question.type"
       [placeholder]="question.placeholder | translate" [maxLength]="30" class="form-control">
@@ -19,13 +19,13 @@
       [placeholder]="question.placeholder | translate" [maxLength]="1024" [rows]="6" class="form-control"></textarea>
 
     <textarea *ngSwitchCase="'textareaboxlarge'" [formControlName]="question.key" [id]="question.key"
-     [placeholder]="question.placeholder | translate" [maxLength]="10000" [rows]="10" class="form-control"></textarea>
+      [placeholder]="question.placeholder | translate" [maxLength]="10000" [rows]="10" class="form-control"></textarea>
 
     <select [id]="question.key" *ngSwitchCase="'dropdown'" [formControlName]="question.key">
       <option *ngFor="let opt of question.options" [value]="opt.key">{{opt.value}}</option>
     </select>
 
-  </div>
+  </ng-container>
 
   <!-- <div class="errorMessage" *ngIf="!isValid">{{ question.label | translate }} is required</div> -->
 </div>
