--- a/src/app/views/mine-applikationer/mine-applikationer/mine-applikationer.component.html
+++ b/src/app/views/mine-applikationer/mine-applikationer/mine-applikationer.component.html
@@ -1,9 +1,1 @@
-<div class="px-5 py-4">
-  <div class="row">
-    <app-top-bar [title]="'Mine applikationer'" [ctaLabel]="'Opret ny applikation'"
-      [ctaRouterLink]="'/create-application'"></app-top-bar>
-  </div>
-  <div class="row">
-    <app-applications-table></app-applications-table>
-  </div>
-</div>
+<router-outlet></router-outlet>
