--- a/src/assets/scss/_tables.scss
+++ b/src/assets/scss/_tables.scss
@@ -3,9 +3,10 @@
     // -webkit-border-radius: .25rem;
     // -moz-border-radius: .25rem;
     // border-radius: .25rem;
-    box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.01), 0px 1px 16px rgba(0, 0, 0, 0.03), 0px 0px 1px rgba(0, 0, 0, 0.12);
-    -webkit-box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.01), 0px 1px 16px rgba(0, 0, 0, 0.03), 0px 0px 1px rgba(0, 0, 0, 0.12);
-    -moz-box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.01), 0px 1px 16px rgba(0, 0, 0, 0.03), 0px 0px 1px rgba(0, 0, 0, 0.12);
+    box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.14), 0px 1px 13px rgba(0, 0, 0, 0.03), 0px 0px 1px rgba(0, 0, 0, 0.22);
+    -webkit-box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.14), 0px 1px 13px rgba(0, 0, 0, 0.03), 0px 0px 1px rgba(0, 0, 0, 0.22);
+    -moz-box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.14), 0px 1px 13px rgba(0, 0, 0, 0.03), 0px 0px 1px rgba(0, 0, 0, 0.22);
+    // border: $grey-border solid 1px;
     
     * {
         * {
