--- a/src/app/shared/form/form-header/form-header.component.scss
+++ b/src/app/shared/form/form-header/form-header.component.scss
@@ -7,10 +7,14 @@
     padding-top: .5rem; 
     padding-bottom: .5rem;
     font-family: roboto;
+    border-bottom: $grey-border solid 1px;
+    box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.11), 0px 1px 16px rgba(0, 0, 0, 0.03), 0px 0px 1px rgba(0, 0, 0, 0.22);
+    -webkit-box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.11), 0px 1px 16px rgba(0, 0, 0, 0.03), 0px 0px 1px rgba(0, 0, 0, 0.22);
+    -moz-box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.11), 0px 1px 16px rgba(0, 0, 0, 0.03), 0px 0px 1px rgba(0, 0, 0, 0.22);
 
     > * {
         padding: .5rem 1rem;
-        color: $grey-text;
+        color: $black-light;
     }
     
     .back-button {
