--- a/src/app/views/mine-applikationer/applications-table-row/applications-table-row.component.html
+++ b/src/app/views/mine-applikationer/applications-table-row/applications-table-row.component.html
@@ -6,13 +6,14 @@
       <td class="position-relative">0</td>
     </ng-template>
     <td class="position-relative pr-3">
-      {{application.updatedAt}}
+      {{application.updatedAt | date:'dd/MM yyyy'}}
       <div class="dropdown position-absolute">
-        <div id="tableRowDropdown-{{application.id}}" class="applicationRow__edit dropdown-toggle" data-toggle="dropdown"
-          aria-expanded="false"></div>
+        <a href="#" role="button" id="tableRowDropdown-{{application.id}}" class="applicationRow__edit dropdown-toggle" data-toggle="dropdown"
+          aria-expanded="false"></a>
         <ul class="dropdown-menu" attr.aria-labelledby="tableRowDropdown-{{application.id}}">
           <!-- <li><a class="dropdown-item" href="#">Slet</a></li> -->
-          <li><a class="dropdown-item" href="#">{{ 'APPLICATION-TABLE-ROW.DELETE' | translate }}</a></li>
+          <li><a (click)="clickDelete()" class="dropdown-item" [routerLink]="">{{ 'APPLICATION-TABLE-ROW.DELETE' | translate }}</a></li>
+          <li><a class="dropdown-item" [routerLink]="['edit-application', application.id]" routerLinkActive="active">{{ 'APPLICATION-TABLE-ROW.EDIT' | translate }}</a></li>
         </ul>
       </div>
     </td>
