--- a/src/app/views/mine-applikationer/applications-table-row/applications-table-row.component.scss
+++ b/src/app/views/mine-applikationer/applications-table-row/applications-table-row.component.scss
@@ -2,15 +2,14 @@
 
 .dropdown {
     right: 3rem;
-    top: 18px;
+    top: 10px;
 
     .applicationRow__edit {
         width: 10px;
-        height: 22px;
-        background-image: radial-gradient(circle, $black 2px, transparent 2px);
+        height: 20px;
+        background-image: radial-gradient(circle, $black 2px, transparent 1px);
         background-size: 100% 33.33%;
-        padding: 10px;
-        cursor: pointer;
+        padding: 2px 10px;
 
         &:after {
             display: none;
