--- a/src/assets/scss/_forms.scss
+++ b/src/assets/scss/_forms.scss
@@ -1,9 +1,27 @@
 .os2-form {
     width: 100%;
-    padding-left: 3rem;
-    padding-right: 3rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+
+    @include media-breakpoint-up(md) {
+        width: 510px;
+        margin-left: calc((100% - 510px) / 2);
+        margin-right: calc((100% - 510px) / 2);
+    }
 
     @include media-breakpoint-up(lg) {
+        width: 720px;
+        margin-left: calc((100% - 720px) / 2);
+        margin-right: calc((100% - 720px) / 2);
+    }
+
+    @include media-breakpoint-up(xl) {
+        width: 900px;
+        margin-left: calc((100% - 900px) / 2);
+        margin-right: calc((100% - 900px) / 2);
+    }
+
+    @include media-breakpoint-up(xxl) {
         width: 1000px;
         margin-left: calc((100% - 1000px) / 2);
         margin-right: calc((100% - 1000px) / 2);
@@ -17,9 +35,38 @@
 
 .form-control {
     border: $grey-border solid 1px;
-    color: $grey-text;
+    color: $black;
+
+    &:focus {
+        color: $black;
+        border-color: $grey-outline;
+        box-shadow: 0 0 0 0.2rem $grey-outline;
+    }
 }
 
 textarea {
     resize: none;
-  }
+}
+
+.select-box {
+    border: 1px solid #747474;
+    border-radius: 4px;
+    color: #1a1a1a;
+    display: block;
+    font-size: 16px;
+    line-height: 21px;
+    height: calc(21px + (8px * 2));
+    max-width: 16rem;
+    margin-right: 8px;
+    margin-left: 8px;
+    text-align: left;
+    padding: calc(8px - 1px) calc(16px - 1px);
+    padding-right: 32px;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='iso-8859-1'%3F%3E%3C!-- Generator: Adobe Illustrator 19.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0) --%3E%3Csvg version='1.1' id='Capa_1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' x='0px' y='0px' viewBox='0 0 256 256' style='enable-background:new 0 0 256 256;' xml:space='preserve'%3E%3Cg%3E%3Cg%3E%3Cpolygon points='225.813,48.907 128,146.72 30.187,48.907 0,79.093 128,207.093 256,79.093 '/%3E%3C/g%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3C/svg%3E%0A");
+    background-repeat: no-repeat;
+    background-position: calc(100% - 10px);
+    background-size: 12px;
+}
