Before vacation handover for Thomas

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,8 @@
 @import '~src/assets/scss/variables';
 
 #content {
-    padding-left: $navWidth;
+
+    @include media-breakpoint-up(sm) {
+        padding-left: $navWidth;
+    }
 }
