--- a/src/assets/scss/_forms.scss
+++ b/src/assets/scss/_forms.scss
@@ -56,7 +56,6 @@ textarea {
     font-size: 16px;
     line-height: 21px;
     height: calc(21px + (8px * 2));
-    max-width: 16rem;
     margin-right: 8px;
     margin-left: 8px;
     text-align: left;
@@ -69,4 +68,18 @@ textarea {
     background-repeat: no-repeat;
     background-position: calc(100% - 10px);
     background-size: 12px;
+    box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.12),
+        0px 1px 16px rgba(0, 0, 0, 0.03), 0px 0px 1px rgba(0, 0, 0, 0.24);
+    -webkit-box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.12),
+        0px 1px 16px rgba(0, 0, 0, 0.03), 0px 0px 1px rgba(0, 0, 0, 0.24);
+    -moz-box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.12),
+        0px 1px 16px rgba(0, 0, 0, 0.03), 0px 0px 1px rgba(0, 0, 0, 0.24);
+}
+
+.select-box-sm {
+    max-width: 16rem;
+}
+
+.select-box-md {
+    max-width: 32rem;
 }
