--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -8,10 +8,11 @@ $navWidth: 267px;
 
 // Colors
 $white: #fff;
-
+$grey: #aebabe;
 $grey-light: #f8f8f8;
 $grey-tablehead: #f8fafc;
 $grey-highlight: #f2f4f7;
+$grey-separator: #dee3e9;
 $grey-border: #b3b3b3;
 $grey-text: #9baeb8;
 $grey-dark: #738a94;
@@ -21,6 +22,7 @@ $black-light: #555f63;
 $black: #3e4b50;
 
 $blue: #49b3ee;
+$blue-hue: #2f95cc;
 
 $green-light: #54a758;
 $green: #43a047;
