--- a/src/app/shared/form/form-body-application/form-body-application.component.html
+++ b/src/app/shared/form/form-body-application/form-body-application.component.html
@@ -6,8 +6,8 @@
     </div>
 
     <div class="form-row mt-5">
-      <button class="btn btn-dark" type="submit" [disabled]="!form.valid">{{ submitButton }}</button>
-      <button (click)="routeBack()" class="btn btn-light ml-2" type="button">{{ 'GEN.CANCEL' | translate}}</button>
+      <button (click)="routeBack()" class="btn btn-light" type="button">{{ 'GEN.CANCEL' | translate}}</button>
+      <button class="btn btn-dark ml-2" type="submit" [disabled]="!form.valid">{{ submitButton }}</button>
     </div>
   </form>
 </div>
