--- a/src/app/shared/navbar/navbar.component.scss
+++ b/src/app/shared/navbar/navbar.component.scss
@@ -6,8 +6,12 @@
     background-color: $white;
     border-right: $grey-border solid 1px;
     
-    @include media-breakpoint-up(md) {  
+    @include media-breakpoint-up(sm) {  
         width: $navWidth;
+    }
+
+    @include media-breakpoint-up(md) {  
+        position: fixed;
     }
 
     .navbar-nav {
