--- a/src/app/views/mine-applikationer/applications-table-row/applications-table-row.component.scss
+++ b/src/app/views/mine-applikationer/applications-table-row/applications-table-row.component.scss
@@ -1,36 +1,7 @@
 @import '~src/assets/scss/variables';
 
-.dropdown {
-    right: 3rem;
-    top: 10px;
-
-    .applicationRow__edit {
-        width: 10px;
-        height: 20px;
-        background-image: radial-gradient(circle, $black 2px, transparent 1px);
-        background-size: 100% 33.33%;
-        padding: 2px 10px;
-
-        &:after {
-            display: none;
-        }
-    }
-
-    .dropdown-menu {
-        min-width: 90px !important;
-        left: -35px !important;
-
-        li {
-            a {
-                font-family: roboto-bold;
-                color: $black;
-                font-size: 12px;
-                line-height: 14px;
-            }
-
-            &:hover {
-                background-color: $grey-highlight;
-            }
-        }
-    }
+.application-link {
+    color: $blue-hue;
+    text-decoration: none;
+    font-family: roboto-bold;
 }
