--- a/src/app/views/mine-applikationer/list-applications/list-applications.component.html
+++ b/src/app/views/mine-applikationer/list-applications/list-applications.component.html
@@ -1,9 +1,9 @@
 <div class="px-5 py-4">
-    <div class="row">
-      <app-top-bar [title]="'NAV.MY-APPLICATIONS' | translate" [ctaLabel]="'FORM.CREATE-NEW-APPLICATION' | translate"
-        [ctaRouterLink]="'create-application'"></app-top-bar>
+    <div class="row mb-5">
+      <app-top-bar [sort]="sort" [(selectedSortId)]="selectedSortId" [pageLimit]="pageLimit" [title]="'NAV.MY-APPLICATIONS' | translate" [ctaLabel]="'FORM.CREATE-NEW-APPLICATION' | translate"
+        [ctaRouterLink]="'create-application'" (updatePageLimit)="updatePageLimit($event)" (selectedSortChange)="changeSort($event)"></app-top-bar>
     </div>
     <div class="row">
-      <app-applications-table></app-applications-table>
+      <app-applications-table [selectedSortObject]="selectedSortObject" [pageLimit]="pageLimit"></app-applications-table>
     </div>
   </div>
