--- a/src/assets/scss/_buttons.scss
+++ b/src/assets/scss/_buttons.scss
@@ -12,9 +12,9 @@
     -moz-box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.12),
         0px 1px 16px rgba(0, 0, 0, 0.03), 0px 0px 1px rgba(0, 0, 0, 0.24);
 
-        font-size: 16px;
-        line-height: 19px;
-        padding: .5rem .75rem;
+    font-size: 16px;
+    line-height: 19px;
+    padding: 0.5rem 0.75rem;
 
     &:active:focus {
         box-shadow: 0 0 0 0.2rem $grey-outline;
