IOT-5: Vis IoT-enheder i tabel

--- a/src/app/views/alle-iot-enheder/iot-devices-table-row/iot-devices-table-row.component.html
+++ b/src/app/views/alle-iot-enheder/iot-devices-table-row/iot-devices-table-row.component.html
@@ -1,1 +1,6 @@
-<p>iot-devices-table-row works!</p>
+<td class="position-relative"><a [routerLink]="['device', device.id]" routerLinkActive="active"
+        class="device-link">{{device.name}}</a></td>
+<td>{{"IOT-DEVICE-TYPES." + device.type | translate}}</td>
+<td>N/A</td>
+<td>N/A</td>
+<td>{{lastActive()}}</td>
