IOT-5: Visning af IoT-Enheder

--- a/src/app/views/alle-iot-enheder/iot-devices-table-row/iot-devices-table-row.component.html
+++ b/src/app/views/alle-iot-enheder/iot-devices-table-row/iot-devices-table-row.component.html
@@ -1,4 +1,4 @@
-<td class="position-relative"><a [routerLink]="['device', device.id]" routerLinkActive="active"
+<td class="position-relative"><a [routerLink]="['iot-device', device.id]" routerLinkActive="active"
         class="device-link">{{device.name}}</a></td>
 <td>{{"IOT-DEVICE-TYPES." + device.type | translate}}</td>
 <td>N/A</td>
