--- a/src/app/shared/navbar/navbar.component.scss
+++ b/src/app/shared/navbar/navbar.component.scss
@@ -48,6 +48,9 @@
                 &#allIoTDevices {
                     background-image: url("data:image/svg+xml,%3Csvg width='15' height='14' viewBox='0 0 15 14' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M12.5 0H2.5C1.375 0 0.5 0.90625 0.5 2V12C0.5 13.125 1.375 14 2.5 14H12.5C13.5938 14 14.5 13.125 14.5 12V2C14.5 0.90625 13.5938 0 12.5 0ZM13.5 12C13.5 12.5625 13.0312 13 12.5 13H2.5C1.9375 13 1.5 12.5625 1.5 12V2C1.5 1.46875 1.9375 1 2.5 1H12.5C13.0312 1 13.5 1.46875 13.5 2V12ZM4 3C3.71875 3 3.5 3.25 3.5 3.5V7.5C3.5 7.78125 3.71875 8 4 8C4.25 8 4.5 7.78125 4.5 7.5V3.5C4.5 3.25 4.25 3 4 3ZM6 3C5.71875 3 5.5 3.25 5.5 3.5V7.5C5.5 7.78125 5.71875 8 6 8C6.25 8 6.5 7.78125 6.5 7.5V3.5C6.5 3.25 6.25 3 6 3ZM8 3C7.71875 3 7.5 3.25 7.5 3.5V7.5C7.5 7.78125 7.71875 8 8 8C8.25 8 8.5 7.78125 8.5 7.5V3.5C8.5 3.25 8.25 3 8 3Z' fill='%233e4b50'/%3E%3C/svg%3E%0A");
                 }
+                &#myLoraGateway {
+                    background-image: url("data:image/svg+xml,%3Csvg width='15' height='14' viewBox='0 0 15 14' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M12.5 0H2.5C1.375 0 0.5 0.90625 0.5 2V12C0.5 13.125 1.375 14 2.5 14H12.5C13.5938 14 14.5 13.125 14.5 12V2C14.5 0.90625 13.5938 0 12.5 0ZM13.5 12C13.5 12.5625 13.0312 13 12.5 13H2.5C1.9375 13 1.5 12.5625 1.5 12V2C1.5 1.46875 1.9375 1 2.5 1H12.5C13.0312 1 13.5 1.46875 13.5 2V12ZM4 3C3.71875 3 3.5 3.25 3.5 3.5V7.5C3.5 7.78125 3.71875 8 4 8C4.25 8 4.5 7.78125 4.5 7.5V3.5C4.5 3.25 4.25 3 4 3ZM6 3C5.71875 3 5.5 3.25 5.5 3.5V7.5C5.5 7.78125 5.71875 8 6 8C6.25 8 6.5 7.78125 6.5 7.5V3.5C6.5 3.25 6.25 3 6 3ZM8 3C7.71875 3 7.5 3.25 7.5 3.5V7.5C7.5 7.78125 7.71875 8 8 8C8.25 8 8.5 7.78125 8.5 7.5V3.5C8.5 3.25 8.25 3 8 3Z' fill='%233e4b50'/%3E%3C/svg%3E%0A");
+                }
             }
 
             &.active,
