--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -27,9 +27,12 @@ $blue-hue: #2f95cc;
 $green-light: #54a758;
 $green: #43a047;
 
-$orange-light: #fa8842;
-$orange: #f4792f;
+$orange-light: #ff6a3c;
+$orange: #E76659;
 $orange-outline: rgba(244, 121, 47, 0.6);
+
+$red-light: #f8e7e9;
+$red: #dc3545;
 
 // Bootstrap overrides
 $theme-colors: (
