--- a/src/app/shared/form/form-body-application/form-body-application.component.html
+++ b/src/app/shared/form/form-body-application/form-body-application.component.html
@@ -1,13 +1,19 @@
-<div class="row">
-  <form (ngSubmit)="onSubmit()" [formGroup]="form" class="os2-form py-5">
+<form (ngSubmit)="onSubmit()" [formGroup]="form" class="os2-form p-3 mt-4">
 
-    <div *ngFor="let question of questions" class="form-row mb-3">
-      <app-question [question]="question" [form]="form"></app-question>
-    </div>
+  <div *ngIf="errorMessages" class="error-messages p-3">
+    <ul class="mb-0">
+      <li *ngFor="let error of errorMessages">
+        {{error}}
+      </li>
+    </ul>
+  </div>
 
-    <div class="form-row mt-5">
-      <button (click)="routeBack()" class="btn btn-light" type="button">{{ 'GEN.CANCEL' | translate}}</button>
-      <button class="btn btn-dark ml-2" type="submit" [disabled]="!form.valid">{{ submitButton }}</button>
-    </div>
-  </form>
-</div>
+  <div *ngFor="let question of questions" class="row mb-5">
+    <div app-question [question]="question" [form]="form"></div>
+  </div>
+
+  <div class="form-row mt-5">
+    <button (click)="routeBack()" class="btn btn-light" type="button">{{ 'GEN.CANCEL' | translate}}</button>
+    <button class="btn btn-dark ml-2" type="submit" [disabled]="!form.valid">{{ submitButton }}</button>
+  </div>
+</form>
