--- a/src/app/shared/form/form.component.html
+++ b/src/app/shared/form/form.component.html
@@ -1,9 +1,8 @@
-<app-form-header [backButton]="backButton" [title]="title" [formType]="formType"
-  [questions]="iotDeviceQuestions$ | async"></app-form-header>
+<app-form-header [backButton]="backButton" [title]="title"></app-form-header>
 
 
 <app-form-body-application *ngIf="formType == 'application'" [submitButton]="submitButton" [questions]="applicationQuestions$ | async">
 </app-form-body-application>
 
-<app-form-body-iot-devices *ngIf="formType == 'iotDevice'" [questions]="iotDeviceQuestions$ | async">
+<app-form-body-iot-devices *ngIf="formType == 'iotDevice'" [submitButton]="submitButton" [application]="application" [questions]="iotDeviceQuestions$ | async">
 </app-form-body-iot-devices>
