--- a/src/app/views/alle-iot-enheder/create-iot-devices/create-iot-devices.component.html
+++ b/src/app/views/alle-iot-enheder/create-iot-devices/create-iot-devices.component.html
@@ -1,1 +1,1 @@
-<app-form [submitButton]="submitButton" [backButton]="backButton" [title]="title" [formType]="'iotDevice'"></app-form>
+<app-form [submitButton]="submitButton" [backButton]="backButton" [title]="title" [formType]="'iotDevice'" [application]="application"></app-form>
