--- a/src/app/views/administration-gateway/create-lora-gateway/create-lora-gateway.component.html
+++ b/src/app/views/administration-gateway/create-lora-gateway/create-lora-gateway.component.html
@@ -2,5 +2,5 @@
     [submitButton]="submitButton" 
     [backButton]="backButton" 
     [title]="title" 
-    [formType]="'application'">
+    [formType]="'loraGateway'">
 </app-form>
