--- a/src/app/views/administration-gateway/list-lora-gateway/list-lora-gateway.component.html
+++ b/src/app/views/administration-gateway/list-lora-gateway/list-lora-gateway.component.html
@@ -1,8 +1,15 @@
 <div class="px-5 py-4">
     <div class="row mb-5">
-      <app-top-bar [sort]="sort" [(selectedSortId)]="selectedSortId" [pageLimit]="pageLimit"
-        [title]="'NAV.MINE-LORA-GATEWAYS' | translate" (updatePageLimit)="updatePageLimit($event)"
-        (selectedSortChange)="changeSort($event)"></app-top-bar>
+      <app-top-bar 
+        [sort]="sort" 
+        [(selectedSortId)]="selectedSortId" 
+        [pageLimit]="pageLimit"
+        [title]="'NAV.MINE-LORA-GATEWAYS' | translate" 
+        [ctaLabel]="'FORM.CREATE-NEW-LORA-GATEWAY' | translate"
+        [ctaRouterLink]="'create-lora-gateway'"
+        (updatePageLimit)="updatePageLimit($event)"
+        (selectedSortChange)="changeSort($event)">
+      </app-top-bar>
     </div>
     <div class="row">
       <app-admin-lora-table [selectedSortObject]="selectedSortObject" [pageLimit]="pageLimit"></app-admin-lora-table>
