--- a/src/app/views/administration-gateway/admin-lora-table-row/admin-lora-table-row.component.html
+++ b/src/app/views/administration-gateway/admin-lora-table-row/admin-lora-table-row.component.html
@@ -1,6 +1,50 @@
 <td class="position-relative">
-    {{ gateway.name }}
+    <a
+        [routerLink]="['gateway', gateway.id]"
+        routerLinkActive="active"
+        class="application-link">
+            {{ gateway.name }}
+    </a>
 </td>
+
 <td class="position-relative pr-3">
     {{ gateway.id }}
 </td>
+<td class="position-relative pr-3">
+    {{ gateway.location.longitude }}, {{ gateway.location.latitude }} 
+</td>
+
+<td class="position-relative pr-3">
+    <div class="dropdown position-absolute">
+        <a
+            href="#"
+            role="button"
+            id="tableRowDropdown-{{ gateway.id }}"
+            class="applicationRow__edit dropdown-toggle"
+            data-toggle="dropdown"
+            aria-expanded="false"
+            [attr.aria-label]="'LORA-GATEWAY-TABLE-ROW.SHOW-OPTIONS' | translate"
+        ></a>
+        <ul
+            class="dropdown-menu"
+            attr.aria-labelledby="tableRowDropdown-{{ gateway.id }}"
+        >
+            <li> 
+                <a
+                    (click)="clickDelete()"
+                    class="dropdown-item"
+                    [routerLink]=""
+                    >{{ 'LORA-GATEWAY-TABLE-ROW.DELETE' | translate }}</a
+                >
+            </li>
+            <li>
+                <a
+                    class="dropdown-item"
+                    [routerLink]="['edit-gateway', gateway.id]"
+                    routerLinkActive="active"
+                    >{{ 'LORA-GATEWAY-TABLE-ROW.EDIT' | translate }}</a
+                >
+            </li>
+        </ul>
+    </div>
+</td> 
