--- a/src/app/views/mine-applikationer/edit-application/edit-application.component.html
+++ b/src/app/views/mine-applikationer/edit-application/edit-application.component.html
@@ -1,1 +1,3 @@
-<app-form [submitButton]="submitButton" [backButton]="backButton" [title]="title" [formType]="'application'"></app-form>
+<app-form-header [backButton]="backButton" [title]="title"></app-form-header>
+
+<app-form-body-application [submitButton]="submitButton"></app-form-body-application>
