refactor my-applications

--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -16,13 +16,15 @@
         </a>
       </li>
       <li class="nav-item py-2">
-        <a routerLink="/mine-applikationer" routerLinkActive="active" class="nav-link pl-5 position-relative rounded" id="myApplications">
+        <a routerLink="/my-applications" routerLinkActive="active" class="nav-link pl-5 position-relative rounded"
+          id="myApplications">
 
           {{ 'NAV.MY-APPLICATIONS' | translate }}
         </a>
       </li>
       <li class="nav-item py-2">
-        <a routerLink="/alle-iot-enheder" routerLinkActive="active" class="nav-link pl-5 position-relative rounded" id="allIoTDevices">
+        <a routerLink="/alle-iot-enheder" routerLinkActive="active" class="nav-link pl-5 position-relative rounded"
+          id="allIoTDevices">
           {{ 'NAV.ALL-IOT-DEVICES' | translate }}
         </a>
       </li>
