IOT-32 tilføj ny bindingmodel, rediger henter korrekt data

--- a/src/app/shared/form/form-body-lora-gateway/form-body-lora-gateway.component.html
+++ b/src/app/shared/form/form-body-lora-gateway/form-body-lora-gateway.component.html
@@ -1,21 +1,127 @@
-<form (ngSubmit)="onSubmit()" 
-    [formGroup]="form" 
-    class="os2-form p-3 mt-4">
+<form (ngSubmit)="onSubmit()" #applicationForm="ngForm" class="os2-form p-3 mt-4">
+  <div *ngIf="errorMessages" class="error-messages p-3">
+    <ul class="mb-0">
+      <li *ngFor="let error of errorMessages">
+        {{error}}
+      </li>
+    </ul>
+  </div>
+  <div class="row">
+    <div class="form-group mt-3">
+      <label class="form-label" for="name">{{'QUESTION-LORA-GATEWAY.NAME' | translate}}</label>*
+      <input 
+        type="text" 
+        class="form-control" 
+        id="name" 
+        name="name"
+        [placeholder]="'QUESTION-LORA-GATEWAY.NAME-PLACEHOLDER' | translate" 
+        maxlength="50" 
+        required
+        [(ngModel)]="gateway.name"
+        [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('name'), 'is-valid' : formFailedSubmit && !errorFields.includes('name')}">
+    </div>
 
-    <div *ngIf="errorMessages" class="error-messages p-3">
-      <ul class="mb-0">
-        <li *ngFor="let error of errorMessages">
-          {{error}}
-        </li>
-      </ul>
+    <div class="form-group mt-3">
+      <label class="form-label" for="description">{{'QUESTION-LORA-GATEWAY.DESCRIPTION' | translate}}</label>
+      <textarea 
+        id="description" 
+        name="description"
+        [placeholder]="'QUESTION-LORA-GATEWAY.DESCRIPTION-PLACEHOLDER' | translate" 
+        [maxLength]="1024" 
+        [rows]="6"
+        class="form-control" 
+        [(ngModel)]="gateway.description"
+        [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('description'), 'is-valid' : formFailedSubmit && !errorFields.includes('description')}"></textarea>
     </div>
+
+    <div class="form-group mt-3">
+      <label class="form-label" for="id">{{'QUESTION-LORA-GATEWAY.GATEWAYID' | translate}}</label>
+      <textarea
+        class="form-control" 
+        id="id" 
+        name="id"
+        [placeholder]="'QUESTION-LORA-GATEWAY.GATEWAYID-PLACEHOLDER' | translate" 
+        [maxLength]="16" 
+        class="form-control" 
+        [(ngModel)]="gateway.id"
+        [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('description'), 'is-valid' : formFailedSubmit && !errorFields.includes('description')}"
+        ></textarea>
+    </div>
+
+    <!-- <div class="row mb-5">
+      <div class="form-group mt-3 col-6">
+        <label class="form-label" for="longitude">{{'GATEWAY.LONGITUDE' | translate}}</label>*
+        <input 
+          type="number" 
+          class="form-control" 
+          id="longitude" 
+          name="longitude" 
+          [placeholder]="00" 
+          required
+          [(ngModel)]="gateway.location.longitude" 
+          step=".000001" 
+          min="-180" 
+          max="180" 
+          maxlength="9" 
+          (keyup)="onCoordinateKey($event)"
+          [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('longitude'), 'is-valid' : formFailedSubmit && !errorFields.includes('longitude')}">
+      </div>
   
-    <div *ngFor="let question of questions" class="row mb-5">
-      <div app-question [question]="question" [form]="form"></div>
-    </div>
+      <div class="form-group mt-3 col-6">
+        <label class="form-label" for="latitude">{{'GATEWAY.LATITUDE' | translate}}</label>*
+        <input 
+          type="number" 
+          class="form-control" 
+          id="location.latitude" 
+          name="location.latitude" 
+          [placeholder]="00" 
+          required
+          [(ngModel)]="gateway.location.latitude" 
+          step=".000001" 
+          min="-180" 
+          max="180" 
+          maxlength="9" 
+          (keyup)="onCoordinateKey($event)"
+          [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('longitude'), 'is-valid' : formFailedSubmit && !errorFields.includes('longitude')}">
+      </div>
   
-    <div class="form-row mt-5">
-      <button (click)="routeBack()" class="btn btn-light" type="button">{{ 'GEN.CANCEL' | translate}}</button>
-      <button class="btn btn-dark ml-2" type="submit" [disabled]="!form.valid">{{ submitButton }}</button>
+      <div class="form-group mt-3 col-6">
+        <label class="form-label" for="altitude">{{'GATEWAY.ALTITUDE' | translate}}</label>*
+        <input 
+          type="number" 
+          class="form-control" 
+          id="altitude" 
+          name="altitude" 
+          [placeholder]="00" 
+          required
+          [(ngModel)]="gateway.location.altitude" 
+          step=".000001" 
+          min="-180" 
+          max="180" 
+          maxlength="9" 
+          (keyup)="onCoordinateKey($event)"
+          [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('longitude'), 'is-valid' : formFailedSubmit && !errorFields.includes('longitude')}">
+      </div>
+    </div> -->
+    <div class="form-group mt-3">
+      <label class="form-label" for="name">{{'QUESTION-LORA-GATEWAY.METADATA' | translate}}</label>*
+      <input 
+        type="text" 
+        class="form-control" 
+        id="metadata" 
+        name="metadata"
+        [placeholder]="'QUESTION-LORA-GATEWAY.METADATA-PLACEHOLDER' | translate" 
+        maxlength="50" 
+        required
+        [(ngModel)]="gateway.metadata"
+        [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('name'), 'is-valid' : formFailedSubmit && !errorFields.includes('name')}">
     </div>
-  </form>
+
+  </div>
+
+  <div class="form-group mt-5">
+    <button (click)="routeBack()" class="btn btn-light" type="button">{{ 'GEN.CANCEL' | translate}}</button>
+    <button class="btn btn-dark ml-2" type="submit">{{ submitButton }}</button>
+  </div>
+</form>
+<!-- test app-form-iot--gateway -->
