--- a/src/app/views/administration-gateway/gateway/gateway.component.html
+++ b/src/app/views/administration-gateway/gateway/gateway.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="gateway">
-    <app-top-bar-single [data]="gateway"></app-top-bar-single>
+    <app-top-bar-single [data]="gateway" [backButton]="backButton" [buttons]="buttons"></app-top-bar-single>
     <div class="application-component">
       <div class="col-12 mb-4 py-3 bottom-separator">
         <div class="col-12 col-sm-4">
