--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -28,7 +28,7 @@
       </li>
       <li class="nav-item py-2">
         <a routerLink="/mine-lora-gateways" routerLinkActive="active" class="nav-link pl-5 position-relative rounded" id="myLoraGateway">
-          {{ 'NAV.MINE-LORA-GATEWAYS' | translate }}
+          {{ 'NAV.MY-LORA-GATEWAYS' | translate }}
         </a>
       </li>
     </ul>
