--- a/src/app/views/administration-gateway/edit-gateway/edit-gateway.component.html
+++ b/src/app/views/administration-gateway/edit-gateway/edit-gateway.component.html
@@ -1,5 +1,3 @@
-<app-form [submitButton]="submitButton" 
-    [backButton]="backButton" 
-    [title]="title" 
-    [formType]="'loraGateway'">
-</app-form>
+<app-form-header [backButton]="backButton" [title]="title" ></app-form-header>
+
+<app-form-body-lora-gateway [submitButton]="submitButton"></app-form-body-lora-gateway>
