--- a/src/app/shared/form/form-body-lora-gateway/form-body-lora-gateway.component.html
+++ b/src/app/shared/form/form-body-lora-gateway/form-body-lora-gateway.component.html
@@ -36,19 +36,19 @@
 
     <div class="form-group mt-3">
       <label class="form-label" for="id">{{'QUESTION-LORA-GATEWAY.GATEWAYID' | translate}}</label>
-      <textarea
+        <input 
+        type="text" 
         class="form-control" 
         id="id" 
         name="id"
         [placeholder]="'QUESTION-LORA-GATEWAY.GATEWAYID-PLACEHOLDER' | translate" 
-        [maxLength]="16" 
-        class="form-control" 
+        maxlength="50" 
+        required
         [(ngModel)]="gateway.id"
-        [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('description'), 'is-valid' : formFailedSubmit && !errorFields.includes('description')}"
-        ></textarea>
+        [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('name'), 'is-valid' : formFailedSubmit && !errorFields.includes('name')}">
     </div>
 
-    <!-- <div class="row mb-5">
+    <div class="row mb-5">
       <div class="form-group mt-3 col-6">
         <label class="form-label" for="longitude">{{'GATEWAY.LONGITUDE' | translate}}</label>*
         <input 
@@ -102,7 +102,7 @@
           (keyup)="onCoordinateKey($event)"
           [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('longitude'), 'is-valid' : formFailedSubmit && !errorFields.includes('longitude')}">
       </div>
-    </div> -->
+    </div>
     <div class="form-group mt-3">
       <label class="form-label" for="name">{{'QUESTION-LORA-GATEWAY.METADATA' | translate}}</label>*
       <input 
@@ -113,7 +113,7 @@
         [placeholder]="'QUESTION-LORA-GATEWAY.METADATA-PLACEHOLDER' | translate" 
         maxlength="50" 
         required
-        [(ngModel)]="gateway.metadata"
+        [(ngModel)]="gateway.tags"
         [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('name'), 'is-valid' : formFailedSubmit && !errorFields.includes('name')}">
     </div>
 
