--- a/src/app/views/mine-applikationer/application/application.component.html
+++ b/src/app/views/mine-applikationer/application/application.component.html
@@ -20,4 +20,8 @@
       </div>
     </div>
   </div>
+  <div>
+    <a [routerLink]="['datatarget']" 
+      routerLinkActive="active" class="application-link">datatarget</a>
+  </div>
 </ng-container>
