IOT-98 add show datatarget

--- a/src/app/views/datatarget/datatarget-tabel-row/datatarget-tabel-row.component.html
+++ b/src/app/views/datatarget/datatarget-tabel-row/datatarget-tabel-row.component.html
@@ -1,7 +1,6 @@
 <td class="position-relative">
-    {{datatarget.name}}
-    <!-- <a [routerLink]="['datatarget', datatarget.id]"
-    routerLinkActive="active" class="application-link">{{datatarget.name}}</a></td> -->
+    <a [routerLink]="['datatarget', datatarget.id]"
+    routerLinkActive="active" class="application-link">{{datatarget.name}}</a></td>
 <td class="position-relative pr-3">
   {{datatarget.type}}
   <div class="dropdown position-absolute">
