--- a/src/app/views/mine-applikationer/application/application.component.html
+++ b/src/app/views/mine-applikationer/application/application.component.html
@@ -21,7 +21,7 @@
     </div>
   </div>
   <div>
-    <a [routerLink]="['datatarget']" 
+    <a [routerLink]="['datatarget-list']" 
       routerLinkActive="active" class="application-link">datatarget</a>
   </div>
 </ng-container>
