--- a/src/app/views/datatarget/datatarget-tabel-row/datatarget-tabel-row.component.html
+++ b/src/app/views/datatarget/datatarget-tabel-row/datatarget-tabel-row.component.html
@@ -4,14 +4,18 @@
 <td class="position-relative pr-3">
   {{datatarget.type}}
   <div class="dropdown position-absolute">
-    <!-- <a href="#" role="button" id="tableRowDropdown-{{datatarget.id}}" class="applicationRow__edit dropdown-toggle"
+    <a href="#" role="button" id="tableRowDropdown-{{datatarget.id}}" class="applicationRow__edit dropdown-toggle"
       data-toggle="dropdown" aria-expanded="false"
-      [attr.aria-label]="'APPLICATION-TABLE-ROW.SHOW-OPTIONS' | translate"></a>
-    <ul class="dropdown-menu" attr.aria-labelledby="tableRowDropdown-{{application.id}}">
-      <li><a (click)="clickDelete()" class="dropdown-item"
-          [routerLink]="">{{ 'APPLICATION-TABLE-ROW.DELETE' | translate }}</a></li>
-      <li><a class="dropdown-item" [routerLink]="['edit-application', application.id]"
-          routerLinkActive="active">{{ 'APPLICATION-TABLE-ROW.EDIT' | translate }}</a></li>
-    </ul> -->
+      [attr.aria-label]="'DATATARGET-TABLE-ROW.SHOW-OPTIONS' | translate"></a>
+    <ul class="dropdown-menu" attr.aria-labelledby="tableRowDropdown-{{datatarget.id}}">
+      <li>
+        <a (click)="clickDelete()" class="dropdown-item"
+          [routerLink]="">{{ 'DATATARGET-TABLE-ROW.DELETE' | translate }}</a>
+      </li>
+      <!-- <li>
+        <a class="dropdown-item" [routerLink]="['edit-datatarget', datatarget.id]"
+          routerLinkActive="active">{{ 'DATATARGET-TABLE-ROW.EDIT' | translate }}</a>
+      </li> -->
+    </ul>
   </div>
 </td>
