--- a/src/app/views/datatarget/datatarget-table/datatarget-table.component.html
+++ b/src/app/views/datatarget/datatarget-table/datatarget-table.component.html
@@ -7,7 +7,8 @@
     </thead>
     <tbody>
       <tr *ngFor="let datatarget of datatargets" class="py-3"
-        app-datatarget-tabel-row [datatarget]="datatarget">
+        app-datatarget-tabel-row [datatarget]="datatarget"
+        (deleteDatatarget)="deleteDatatarget($event)">
       </tr>
     </tbody>
   </table>
