IOT-98 imp. edit datatarget

--- a/src/app/shared/form/form-body-datatarget/form-body-datatarget.component.html
+++ b/src/app/shared/form/form-body-datatarget/form-body-datatarget.component.html
@@ -27,8 +27,8 @@
             <label class="form-label" for="url">{{'QUESTION.GIVE-DATATARGET-URL' | translate}}</label>*
             <input type="text" 
                 class="form-control" 
-                id="name" 
-                name="name"
+                id="url" 
+                name="url"
                 [placeholder]="'QUESTION.DATATARGET-URL-PLACEHOLDER' | translate"  
                 required
                 [(ngModel)]="datatarget.url"
