--- a/src/app/views/datatarget/datatarget-tabel-row/datatarget-tabel-row.component.html
+++ b/src/app/views/datatarget/datatarget-tabel-row/datatarget-tabel-row.component.html
@@ -12,10 +12,10 @@
         <a (click)="clickDelete()" class="dropdown-item"
           [routerLink]="">{{ 'DATATARGET-TABLE-ROW.DELETE' | translate }}</a>
       </li>
-      <!-- <li>
-        <a class="dropdown-item" [routerLink]="['edit-datatarget', datatarget.id]"
+      <li>
+        <a class="dropdown-item" [routerLink]="['datatarget-edit', datatarget.id]"
           routerLinkActive="active">{{ 'DATATARGET-TABLE-ROW.EDIT' | translate }}</a>
-      </li> -->
+      </li>
     </ul>
   </div>
 </td>
